# Elastic-Node-Monitoring

./: .gitignore  BUILD  BUILD.LUFA  BUILD.bazel  Makefile  README.md  WORKSPACE  demo_notes.txt  elasticNodeMonitor.code-workspace  flash  helfer.txt  icac_demo_runner  platformio.ini  readme.markdown  vars.bzl  vars.bzl.example
LUFA.bk/CodeTemplates/: LUFAConfig.h
app/: BUILD.bazel  blinkExample.c  currentSenseApp.c  main.c  measurement.c
app/Old/: demoICAC.c  experiment.c  findSensorsApp.c
app/adapter_PAC1720/: adapter_PAC1720.c  adapter_PAC1720.h
data/: 2020-12-03 23:28:06.014000.csv  2020-12-03 23:31:43.532683.csv  2020-12-03 23:32:17.868608.csv
docs/: conf.py  doxy.conf
lib/: BUILD  BUILD.bazel
lib/LUFA-Setup/: Helpers.c  Helpers.h
lib/PAC1720_driver/: PAC1720_definitions.h
lib/current_sense/v4/: current_measurement.h
lib/debug/: debug.h  debugUsb.c
lib/i2cmaster/: twimaster.c
lib/lufa/: BUILD  Descriptors.h.bk  lufa.c  lufa.h
lib/measurement/: sub_system.c  sub_system.h
scripts/: analysis.py  captureMeasurement.py  config.py  currentMonitoring.py  fusertester.sh  icac_currentMonitoring.py  icac_demo_runner.py  icac_energyPerBatchPlotter.py  icac_performancePlotter.py  icac_powerPlotter.py  icac_serialReader_master.py  icac_serialReader_monitor.py  killPlotter.sh  lib_serialCharReader.py  mock_serialReaderMaster.py  serial_echo.py  serial_echo_binary.py  serial_monitor.py  serial_plotter.py  tester.py
src/: BUILD.bazel  currentSenseApp.c  main.c
src/OLDcircular_buffer/: circular_buffer.c
src/OLDcurrent_sense/v3/: current_sense.c  current_sense.h
src/OLDcurrent_sense/v4/: current_measurement.c  current_sense.c  current_sense.h
src/PAC1720_driver/: PAC1720_driver.c
src/adapter_PAC1720/: adapter_PAC1720.h
src/debug/: debug.c  debug.h
src/elasticNodeMonitoring/: elasticNodeMonitoring.c  elasticNodeMonitoring.h
src/measurement/: sub_system.c
test/: BUILD.bazel  first_Test.c
uploadScripts/: bitfileConfigs.py  portConfigs.py
