load("@AvrToolchain//platforms/cpu_frequency:cpu_frequency.bzl", "cpu_frequency_flag")

py_binary(
    name = "init",
    srcs = ["init.py"],
)

py_library(
    name = "config",
    srcs = ["scripts/config.py"],
)

py_binary(
    name = "captureMeasurement",
    srcs = ["scripts/captureMeasurement.py"],
    deps = [
    "config",
    ],
)
