load("@AvrToolchain//:helpers.bzl", "default_embedded_binary", "default_embedded_binaries")
load("@AvrToolchain//platforms/cpu_frequency:cpu_frequency.bzl", "cpu_frequency_flag")

default_embedded_binary(
    name = "measurement",
    srcs = ["measurement.c"],
    copts = cpu_frequency_flag(),
    uploader = "@AvrToolchain//:avrdude_upload_script",
    deps = [
        "AdapterLib",
        "//:I2cLib",
        "//:PAC1720DriverLib",
        "//:DelayLib",
        "@ElasticNodeMiddleware//:DebugLufaLib",
        "//:ElasticNodeMonitoringLib"
    ],
)

cc_library(
    name = "AdapterLib",
	srcs = ["adapter_PAC1720/adapter_PAC1720.c"],
    hdrs = ["adapter_PAC1720/adapter_PAC1720.h"],
    copts = cpu_frequency_flag(),
    deps = [
        "//:PAC1720DriverLib",
    ],
	visibility = [
		"//test:__pkg__",
		"//test:__subpackages__",
		"@CMock//CMock:__pkg__",
	],
)

default_embedded_binary(
    name = "blinkExample",
    srcs = ["blinkExample.c"],
    copts = cpu_frequency_flag(),
    uploader = "@AvrToolchain//:avrdude_upload_script",
    deps = [
        "//:DelayLib",
        "//:ElasticNodeMonitoringLib",
        "@ElasticNodeMiddleware//:DebugLufaLib",
    ]
)
